Remove unused imports from NaiveLcaFinder, use Set.of() in place of Collections.singletonSet()